# smart-s-n-

./: .dockerignore  .gitattributes  .gitignore  .replit  0.py  00.py  01.py  02.py  03.py  1.json  1.py  10.py  11.py  111.py  112.py  113.py  114.py  12.py  1_fao_yield_scraper.py  1py  2.py  22.py  2_nasa_power_weather.py  3.py  31.py  33.py  3_Agro_Monitoring.md  3_soilgrids_data.py  4.py  44.py  4_merge_datasets.py  5.py  6.py  7.py  77.py  @st.cache_data  Boua.py  Detectıon des colonnes.py  Disease_Detection_Pro.py  Dockerfile.frontend  (+244 more)
.streamlit/: config.toml
.upm/: store.json
Fichier json important/: EN_mapping_fiches_maladies.json
Moh/: agronomic_knowledge_base.py  fertilizer_optimizer.py  region_selector.py  regional_context.py  smart_fertilization.py  smart_fertilizer_engine.py  smart_ui.py
SmartFertilizerPro/: __init__.py  smart_fertilizer.py
Test/: debug_disease_detection.py  generate_disease_database_extended.py  h.py  i.py  retrain_clean_model.py  script pour traduction.py  test_effnet.py  w.py  z.py
V2l script/: blip2_loader.py  blip2_train.py  build_mapping_indexed.py  monitor_epoch.py  robuste.py  weather_final_report.csv
backend/: fastapi_server.py
config/: __init__.py  decorators.py  lang.py  language_manager.py  main.py  settings.py  translator.py
core/: auth.py  database.py
data/: agricultural_sample_data.csv  agricultural_sample_data.json  all_diseases_translated.json  complete_agricultural_dataset.xlsx  disease_sample_images.py  extended_disease_database.json  sample_datasets.py  soil_sample_data.csv  soil_sample_data.json  (+2 more)
(+165 files in other folders)
